--- a/backend/package.json
+++ b/backend/package.json
@@ -1,20 +1,29 @@
 {
   "name": "phonebook-backend",
   "type": "module",
-"scripts": {
-  "dev": "nodemon backend/index.js",
-  "start": "node backend/index.js"
-},
+  "scripts": {
+    "dev": "nodemon backend/index.js",
+    "start": "node backend/index.js",
+    "migrate": "sequelize db:migrate",
+    "seed:cities": "node backend/seeders/import_geonames_cities.js",
+    "seed:countries": "node backend/seeders/import_geonames_countries.js",
+    "lint": "eslint .",
+    "format": "prettier --write ."
+  },
   "dependencies": {
     "cors": "^2.8.5",
     "dotenv": "^16.6.1",
     "express": "^5.1.0",
+    "http-errors": "^2.0.0",
     "nodemailer": "^7.0.6",
     "pg": "^8.16.3",
     "pg-hstore": "^2.3.4",
     "sequelize": "^6.37.7"
   },
   "devDependencies": {
-    "nodemon": "^3.1.10"
+    "nodemon": "^3.1.10",
+    "eslint": "^9.12.0",
+    "prettier": "^3.3.3",
+    "cross-env": "^7.0.3"
   }
 }
