--- a/backend/.env
+++ b/backend/.env
@@ -11,3 +11,5 @@ SMTP_PORT=587
 SMTP_USER=andjelastojnic1607@gmail.com
 SMTP_PASS=bjhdyksphqagegbd
 APP_URL=http://localhost:4001
+
+JWT_SECRET=someVeryLongRandomSecretKey123!@
