--- a/backend/package.json
+++ b/backend/package.json
@@ -11,19 +11,21 @@
     "format": "prettier --write ."
   },
   "dependencies": {
+    "bcrypt": "^6.0.0",
     "cors": "^2.8.5",
     "dotenv": "^16.6.1",
     "express": "^5.1.0",
     "http-errors": "^2.0.0",
+    "jsonwebtoken": "^9.0.2",
     "nodemailer": "^7.0.6",
     "pg": "^8.16.3",
     "pg-hstore": "^2.3.4",
     "sequelize": "^6.37.7"
   },
   "devDependencies": {
-    "nodemon": "^3.1.10",
+    "cross-env": "^7.0.3",
     "eslint": "^9.12.0",
-    "prettier": "^3.3.3",
-    "cross-env": "^7.0.3"
+    "nodemon": "^3.1.10",
+    "prettier": "^3.3.3"
   }
 }
