--- a/backend/.env
+++ b/backend/.env
@@ -10,6 +10,9 @@ SMTP_HOST=smtp.gmail.com
 SMTP_PORT=587
 SMTP_USER=andjelastojnic1607@gmail.com
 SMTP_PASS=bjhdyksphqagegbd
+
 APP_URL=http://localhost:4001
+FRONTEND_URL=http://localhost:5173
 
 JWT_SECRET=someVeryLongRandomSecretKey123!@
+NODE_ENV=development
